# EEGNetReplication

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_explore_data.ipynb  02_preprocessing_pipeline.ipynb  03_braindecode_experiments.ipynb  04_model.ipynb  04_model_inter_subject.ipynb  06_eval_data.ipynb  07_function_tests.ipynb
spatialFilters/: acc.txt
src/eegnet_repl/: __init__.py  config.py  dataset.py  fetch.py  model.py  train.py  ui.py
src/my_project/: __init__.py  config.py  dataset.py  fetch.py  train.py  ui.py
tests/: test_dataset.py  test_model.py
